[package]
edition="2021"
name="notionstar"
version="0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv="0.15.0"
indicatif="0.17.7"
notion="0.5.1"
octocrab="0.33.0"
reqwest={ version="0.11.23", features=["json"] }
serde_json="1.0.111"
tokio={ version="1.35.1", features=["macros", "rt-multi-thread"] }
